@@ -91,7 +91,7 @@ public class TexturePacker {
 		this(null, settings);
 	}
 
-	protected ImageProcessor newImageProcessor(Settings settings) {
+	protected ImageProcessor newImageProcessor (Settings settings) {
 		return new ImageProcessor(settings);
 	}
 
@@ -512,7 +512,7 @@ public class TexturePacker {
 		private File file;
 		int score1, score2;
 
-		Rect (BufferedImage source, int left, int top, int newWidth, int newHeight, boolean isPatch) {
+		public Rect (BufferedImage source, int left, int top, int newWidth, int newHeight, boolean isPatch) {
 			image = new BufferedImage(source.getColorModel(),
 				source.getRaster().createWritableChild(left, top, newWidth, newHeight, 0, 0, null),
 				source.getColorModel().isAlphaPremultiplied(), null);
