@@ -31,6 +31,7 @@
 - API Change: DragScrollListener no longer requires the touch/mouse cursor to be directly above/below the scroll pane.
 - API Change: List#toString(Object) changed from protected to public. Subclasses overriding this need to change to public.
 - API Change: List now handles more key presses.
+- API Change: TexturePacker ImageProcessor#addImage(File, String) now returns the Rect.
 
 [1.9.8]
 - Add iPhoneX images
